# agent-facing-compatibility-artifact

./: .gitattributes  .gitignore  ANONYMIZATION.md  ARTIFACT_EVALUATION.md  CITATION.cff  DATASET_CARD.md  LICENSE  README.md  REPRODUCTION_GUIDE.md  REQUIREMENTS.md  requirements.txt
afc_gate/: .gitignore  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  pyproject.toml
afc_gate/afc_gate/: __init__.py  cli.py  compatibility.py  exposure.py  io_utils.py  observability.py  planner.py  replay.py  report.py  schemas.py
afc_gate/configs/: default.yaml
afc_gate/docs/: artifact_boundary.md  ci_cd_integration.md  concepts.md  input_format.md  paper_mapping.md
afc_gate/examples/toy_airline/: api_change_spec.json  baseline_trajectory.json  expected_report.md  tool_schema_after.json
afc_gate/examples/toy_retail/: api_change_spec.json  baseline_trajectory.json  expected_report.md
afc_gate/scripts/: run_toy_demo.ps1  run_toy_demo.sh
afc_gate/tests/: test_cli_demo.py  test_exposure.py  test_observability.py  test_planner.py  test_report.py
docs/: 4open_refresh_instructions.md  4open_release_instructions.md  anonymization_report.json  anonymization_report.md  artifact_inventory.md  artifact_manifest.json  artifact_manifest.md  detector_families.md  known_limitations.md  label_schema.md  metric_definitions.md  offline_reproduction_report.json  reproduction_headlines.json  secret_scan_report.json  secret_scan_report.md  taxonomy.md
scripts/: anonymize_and_package.py  offline_verify_results.py  reproduce_audits.sh  reproduce_figures.sh  reproduce_main_results.sh  smoke_test.sh  (+1 more)
(+262 files in other folders)
