[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afc-gate"
version = "0.1.0"
description = "Agent-Facing Compatibility Gate for evolving tool APIs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "AFC-Gate Authors"}
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "pytest>=8.0"
]

[project.scripts]
afc-gate = "afc_gate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["afc_gate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
